[gd_scene load_steps=6 format=3 uid="uid://by0nr4fgsa8iy"]

[ext_resource type="Script" path="res://Scripts/vase_respawner.gd" id="1_c0ws6"]
[ext_resource type="PackedScene" uid="uid://bknfkiwvyscoj" path="res://Scenes/vase_puzzle.tscn" id="2_7pnwv"]
[ext_resource type="PackedScene" uid="uid://bk1xtdf8f1rv" path="res://Scenes/Interactables/ChestBossKey.tscn" id="3_rpvdr"]
[ext_resource type="PackedScene" uid="uid://gnfy3dyq5eba" path="res://Scenes/Interactables/npc.tscn" id="4_56n3j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jh737"]
radius = 160.0
height = 496.0

[node name="VaseRespawner" type="Node2D"]
script = ExtResource("1_c0ws6")
newpuzzle = ExtResource("2_7pnwv")
reward = ExtResource("3_rpvdr")

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jh737")

[node name="NPC" parent="." instance=ExtResource("4_56n3j")]
position = Vector2(0, -57)
sign_txt = "[center]Try breaking all these vases within 5 seconds![/center]"
sign_txt2 = "[center]Something good will happen if you do![/center]"
sign_txt3 = "[center]But[center]Talk to me to try again[/center]"

[node name="Respawn" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
